--- a/ObliqueViewer_tst/index.html
+++ b/ObliqueViewer_tst/index.html
@@ -48,12 +48,12 @@
                     </div>
                 </div>
                 <div class="heading-btn">
-                    <div class="center"><button id="northElementId" class="btn btn-primary primaryColor #113c66" value="North">North</button></div>
+                    <div class="center"><button id="northElementId" class="btn btn-primary primaryColor #b11116" value="North">North</button></div>
                     <div>
-                        <button id="westElementId" class="btn btn-primary primaryColor #113c66" value="West">West</button><button id="vertElementId" class="btn btn-primary primaryColor activeButton" value="Vert">Vertical</button>
-                        <button id="eastElementId" class="btn btn-primary primaryColor #113c66" value="East">East</button>
+                        <button id="westElementId" class="btn btn-primary primaryColor #b11116" value="West">West</button><button id="vertElementId" class="btn btn-primary primaryColor activeButton" value="Vert">Vertical</button>
+                        <button id="eastElementId" class="btn btn-primary primaryColor #b11116" value="East">East</button>
                     </div>
-                    <div class="center"><button id="southElementId" class="btn btn-primary primaryColor #113c66" value="South">South</button></div>
+                    <div class="center"><button id="southElementId" class="btn btn-primary primaryColor #b11116" value="South">South</button></div>
                 </div>
                 <div class="survey-picker">
                     <div>
