--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -102,38 +102,80 @@
         padding-bottom: 5px;
       }
 
+      /* Menu Styling */
       #menu {
-        background-color: #333;
-        color: white;
-        padding: 15px;
-        text-align: left;
-        position: fixed;
-        width: 100%;
-        top: 0;
-        left: 0;
-        z-index: 1000;
+          background-color: #333;
+          color: white;
+          padding: 15px;
+          position: fixed;
+          width: 100%;
+          top: 0;
+          left: 0;
+          z-index: 1000;
       }
 
-      #menu a {
-        color: white;
-        text-decoration: none;
-        padding: 10px;
-        margin: 5px;
-        display: inline-block;
+      .menu-container {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
       }
 
-      #menu a:hover {
-        background-color: #575757;
+      .menu-logo a {
+          color: white;
+          font-size: 18px;
+          text-decoration: none;
       }
+
+      .hamburger {
+          font-size: 24px;
+          cursor: pointer;
+          color: white;
+      }
+
+      #menu-items {
+          display: none;
+          list-style: none;
+          padding: 0;
+          margin-top: 10px;
+      }
+
+      #menu-items.show {
+          display: block;
+      }
+
+      #menu-items li {
+          padding: 10px;
+      }
+
+      #menu-items li a {
+          color: white;
+          text-decoration: none;
+          display: block;
+      }
+
+      #menu-items li a:hover {
+          background-color: #575757;
+      }
+
     </style>
   </head>
 
   <body>
-    <div id="menu">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </div>
+    <header>
+      <nav id="menu">
+          <div class="menu-container">
+              <div class="menu-logo">
+                  <a href="#">Dakota County Viewer</a>
+              </div>
+              <div class="hamburger" onclick="toggleMenu()">☰</div>
+          </div>
+          <ul id="menu-items">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+          </ul>
+      </nav>
+  </header>
     <div id="map"></div>
     <div class="heading-btn" >
       <div class="center"><button id="northElementId" value="North" class="usa-button usa-button--active">North</button></div>
@@ -164,5 +206,11 @@
     <script src="projections.js"></script>
     <script src="loader.js"></script>
     <script src="index.js"></script>
+    <script>
+      function toggleMenu() {
+          document.getElementById("menu-items").classList.toggle("show");
+      }
+    </script>
+
   </body>
 </html>
