--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -165,7 +165,8 @@
       <nav id="menu">
           <div class="menu-container">
               <div class="menu-logo">
-                  <a href="#">Dakota County Viewer</a>
+                <img src="https://www.co.dakota.mn.us/SiteAssets/DakotaCountyLogo_W.png" alt="Dakota County Logo">
+                <a href="#">Dakota County Oblique Air Photo Viewer</a>
               </div>
               <div class="hamburger" onclick="toggleMenu()">☰</div>
           </div>
