right align and red

--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -145,6 +145,7 @@
 
       #menu-items li {
           padding: 10px;
+          text-align: right;
       }
 
       #menu-items li a {
@@ -154,7 +155,7 @@
       }
 
       #menu-items li a:hover {
-          background-color: #575757;
+          background-color: #b11116;
       }
 
     </style>
