--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -104,7 +104,7 @@
 
       /* Menu Styling */
       #menu {
-          background-color: #333;
+          background-color: #b11116;
           color: white;
           padding: 15px;
           position: fixed;
