--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -106,6 +106,7 @@
       #menu {
           background-color: #b11116;
           color: white;
+          height: 40px;
           padding: 15px;
           position: fixed;
           width: 100%;
@@ -122,7 +123,8 @@
 
       .menu-logo a {
           color: white;
-          font-size: 18px;
+          font-size: 20px;
+          font-weight: bold;
           text-decoration: none;
       }
 
