--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -121,6 +121,11 @@
           align-items: center;
       }
 
+      .menu-logo img {
+        height: 30px; /* Adjusted to fit inside 40px header */
+        margin-right: 10px;
+      }
+
       .menu-logo a {
           color: white;
           font-size: 20px;
