--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -127,6 +127,7 @@
       }
 
       .menu-logo a {
+          font-family: "Avenir Next", sans-serif;
           color: white;
           font-size: 20px;
           font-weight: bold;
