--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -123,6 +123,7 @@
 
       .menu-logo img {
         height: 30px; /* Adjusted to fit inside 40px header */
+        align-items: center;
         margin-right: 10px;
       }
 
