--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -139,6 +139,7 @@
           font-size: 24px;
           cursor: pointer;
           color: white;
+          right: 20px;
       }
 
       #menu-items {
