--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -107,7 +107,7 @@
           background-color: #b11116;
           color: white;
           height: 40px;
-          padding: 15px;
+          padding: 5px 15px;
           position: fixed;
           width: 100%;
           top: 0;
@@ -147,6 +147,7 @@
           list-style: none;
           padding: 0;
           margin-top: 10px;
+          background-color: #b11116;
       }
 
       #menu-items.show {
@@ -159,13 +160,15 @@
       }
 
       #menu-items li a {
+          font-family: "Avenir Next", sans-serif;
           color: white;
           text-decoration: none;
           display: block;
+          font-size: 16px;
       }
 
       #menu-items li a:hover {
-          background-color: #b11116;
+          background-color: #850d12;
       }
 
     </style>
