--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -148,6 +148,7 @@
           padding: 0;
           margin-top: 10px;
           background-color: #b11116;
+          width: 150px;
       }
 
       #menu-items.show {
