more menu moves

--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -159,7 +159,11 @@
       #menu-items {
           display: none;
           list-style: none;
-          padding: 0;
+          position: absolute;
+          top: 45px;
+          right: 20px;
+          padding: 5px;
+          border-radius: 5px;
           text-align: right;
           background-color: #b11116;
           width: 150px;
