--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -146,6 +146,7 @@
           position: absolute;
           right: 20px;
           justify-content: center;
+          font-family: "Avenir Next", sans-serif;
       }
 
       .bar {
