--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -80,6 +80,11 @@
         background-color:red;
       } */
 
+      /* Move Zoom Buttons Down */
+      .ol-control.ol-zoom {
+        bottom: 20px; /* Moves the zoom buttons lower */
+        top: unset; /* Removes default top positioning */
+      }
 
       .survey-picker {
         position: absolute;
