--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -82,8 +82,8 @@
 
       /* Move Zoom Buttons Down */
       .ol-control.ol-zoom {
-        bottom: 20px; /* Moves the zoom buttons lower */
-        top: unset; /* Removes default top positioning */
+        bottom: unset; /* Moves the zoom buttons lower */
+        top: 50px; /* Removes default top positioning */
       }
 
       .survey-picker {
