--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -105,6 +105,7 @@
 
       #displayedSurveyElementId {
         padding-bottom: 5px;
+        font-family: "Avenir Next", sans-serif;
       }
 
       /* Menu Styling */
@@ -149,7 +150,7 @@
           flex-direction: column;
           cursor: pointer;
           position: absolute;
-          right: 30px;
+          right: 50px;
           justify-content: center;
           font-family: "Avenir Next", sans-serif;
       }
