menu items to left

--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -182,7 +182,7 @@
 
       #menu-items li {
           padding: 10px;
-          text-align: right;
+          text-align: left;
       }
 
       #menu-items li a {
