--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -41,7 +41,7 @@
     <script src="openlayers/ol.js"></script>
 
     <link rel="stylesheet" href="openlayers/ol.css" type="text/css">
-    <link rel="stylesheet" href="assets/uswds/css/styles.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
 
     <!-- map controls styling -->
     <style>
