--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -105,7 +105,7 @@
 
       #displayedSurveyElementId {
         padding-bottom: 5px;
-        font-family: "Avenir Next", sans-serif;
+        /* font-family: "Avenir Next", sans-serif;*/
       }
 
       /* Menu Styling */
