test move picker to new footer

--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -232,7 +232,7 @@
       <div class="center"><button id="southElementId" class="usa-button " value="South">South</button></div>
 
     </div>
-    <div class="survey-picker">
+    <!--<div class="survey-picker">
       <div>
         <label class="usa-label" for="survey-options" style = "color: white">Available Surveys</label>
         <select class="usa-select" title="Survey options" id="survey-options"></select>
@@ -242,7 +242,23 @@
         <div id="displayedSurveyElementId" style = "color: white"></div>
         <div id='feedbackId' style = "color: white">Email Feedback to <a href="mailto:gis@co.dakota.mn.us" style = "color: white">gis@co.dakota.mn.us</a></div>
       </div>
-    </div>
+    </div>-->
+    <footer>
+      <div id="survey-picker">
+        <div class="survey-picker">
+          <div>
+            <label class="usa-label" for="survey-options" style = "color: white">Available Surveys</label>
+            <select class="usa-select" title="Survey options" id="survey-options"></select>
+          </div>
+          <div >
+            <label class="usa-label" for="displayedSurveyElementId" style = "color: white">Displayed Survey</label>
+            <div id="displayedSurveyElementId" style = "color: white"></div>
+            <div id='feedbackId' style = "color: white">Email Feedback to <a href="mailto:gis@co.dakota.mn.us" style = "color: white">gis@co.dakota.mn.us</a></div>
+          </div>
+        </div>
+      </div>
+    </footer>
+  
 
     <!-- Nearmap js files - import order is important -->
     <script src="config.js"></script>
