--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -196,6 +196,15 @@
       #menu-items li a:hover {
           background-color: #850d12;
       }
+      .footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: #b11116;
+        color: white;
+        text-align: center;
+      }
 
     </style>
   </head>
