--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -197,8 +197,7 @@
           background-color: #850d12;
       }
       .footer {
-        position: fixed;
-        left: 0;
+        position: absolute;
         bottom: 0;
         width: 100%;
         background-color: #b11116;
