--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -230,6 +230,7 @@
       </div>
       <div class="center"><button id="southElementId" class="usa-button " value="South">South</button></div>
     </div>
+    <div></div>
     <div class="survey-picker">
       <div>
         <label class="usa-label" for="survey-options" style = "color: white">Available Surveys</label>
